--- a/clock.html
+++ b/clock.html
@@ -1,5 +1,5 @@
 <!-- 
-    使い方とか
+    使い方とかはこちら
     https://github.com/uzuky/CGST_clock
 -->
 
@@ -103,7 +103,6 @@
         <script>
           function ddd(){
             const day_of_week_list = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
-            // https://dictionary.cambridge.org/ja/dictionary/english/thursday
             
             var date = new Date();
             var ddd = day_of_week_list[date.getDay()];
@@ -127,8 +126,7 @@
       <p id='date'>
         <script>
           function mmdd(){
-            const month_english_list = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12'];
-            // https://dictionary.cambridge.org/ja/grammar/british-grammar/dates
+            const month_english_list = ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12'];
             
             var date = new Date();
             var mm = month_english_list[date.getMonth()];
