クリックすると readme のページが開くようにしたのとコードの整理とそれに伴う説明の変更

--- a/clock.html
+++ b/clock.html
@@ -11,21 +11,21 @@
 <title>clock</title>
 </head>
 <body>
-
-  <div class="dateall">
-    <div class="background"></div>
-    <div class="pos-star0">
-      <div class="star0">
+  <div id="dateall">
+    <a href="https://uzuky.github.io/CGST_clock/" target="_blank" rel="noopener noreferrer"><div></div></a>
+    <div id="gloss"></div>
+    <div id="pos-star0">
+      <div id="star0">
           <div class="star"></div>
       </div>
     </div>
-    <div class="pos-star1">
-      <div class="star1">
+    <div id="pos-star1">
+      <div id="star1">
           <div class="star"></div>
       </div>
     </div>
-    <div class="pos-star2">
-      <div class="star2">
+    <div id="pos-star2">
+      <div id="star2">
           <div class="star"></div>
       </div>
     </div>
@@ -98,7 +98,7 @@
       </script>
     </div>
 
-    <div class="datenday">
+    <div id="datenday">
       <p id='day'>
         <script>
           function ddd(){
