ロダンNTLG用にカスタマイズしているのでフォントを持っていないと表示が崩れます
日付の背景をついかしたりいろいろした

--- a/mine/clock_mine.html
+++ b/mine/clock_mine.html
@@ -4,24 +4,24 @@
 <head>
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="clock_mine.css" />
-<title>clock</title>
+<title>clock_mine</title>
 </head>
 <body>
 
-  <div class="dateall">
-    <div class="background"></div>
-    <div class="pos-star0">
-      <div class="star0">
+  <div id="dateall">
+    <div id="gloss"></div>
+    <div id="pos-star0">
+      <div id="star0">
           <div class="star"></div>
       </div>
     </div>
-    <div class="pos-star1">
-      <div class="star1">
+    <div id="pos-star1">
+      <div id="star1">
           <div class="star"></div>
       </div>
     </div>
-    <div class="pos-star2">
-      <div class="star2">
+    <div id="pos-star2">
+      <div id="star2">
           <div class="star"></div>
       </div>
     </div>
@@ -94,7 +94,8 @@
       </script>
     </div>
 
-    <div class="datenday">
+    <div id="datenday">
+      <div id="background2"></div>
       <p id='day'>
         <script>
           function ddd(){
